# reta.arch

./: .gitignore  2.sh  2023-04-20.nvim  2023-06-12.nvim  2023-07-typescript.nvim  ARCHITECTURE_ACTIVATION_STAGE36.md  ARCHITECTURE_ARITHMETIC_STAGE38.md  ARCHITECTURE_BOUNDARIES_STAGE32.md  ARCHITECTURE_COHERENCE_STAGE31.md  ARCHITECTURE_CONSOLE_IO_STAGE39.md  ARCHITECTURE_CONTRACTS_STAGE29.md  ARCHITECTURE_IMPACT_STAGE33.md  ARCHITECTURE_MAP_STAGE28.md  ARCHITECTURE_MIGRATION_STAGE34.md  ARCHITECTURE_NESTED_COMPLETION_STAGE41.md  ARCHITECTURE_REFACTOR.md  ARCHITECTURE_REFACTOR_STAGE18.md  ARCHITECTURE_REFACTOR_STAGE22.md  ARCHITECTURE_REFACTOR_STAGE23.md  ARCHITECTURE_REFACTOR_STAGE26.md  ARCHITECTURE_REFACTOR_STAGE27.md  ARCHITECTURE_REFACTOR_STAGE28.md  ARCHITECTURE_REFACTOR_STAGE29.md  ARCHITECTURE_REFACTOR_STAGE30.md  ARCHITECTURE_REFACTOR_STAGE31.md  ARCHITECTURE_REFACTOR_STAGE32.md  ARCHITECTURE_REFACTOR_STAGE33.md  ARCHITECTURE_REFACTOR_STAGE34.md  ARCHITECTURE_REFACTOR_STAGE35.md  ARCHITECTURE_REFACTOR_STAGE36.md  ARCHITECTURE_REFACTOR_STAGE37.md  ARCHITECTURE_REFACTOR_STAGE38.md  ARCHITECTURE_REFACTOR_STAGE39.md  ARCHITECTURE_REFACTOR_STAGE40.md  ARCHITECTURE_REFACTOR_STAGE41.md  ARCHITECTURE_REHEARSAL_STAGE35.md  ARCHITECTURE_ROW_RANGES_STAGE37.md  ARCHITECTURE_STATUS.md  ARCHITECTURE_STATUS_CURRENT.md  ARCHITECTURE_STATUS_PROCESS_PARALLEL_2026-04-27.md  (+154 more)
csv/: religion.csv
doc/: readme-retaPrompt-en.md
i18n/: messages.po  messages.pot  update-script.sh  words.py  words_bootstrap.py  words_context.py  words_legacy_monolith.py  words_matrix.py  words_runtime.py
(+92 files in other folders)
